ADD Validation to Requests
-Se agrego validacion a los request enviados por el usuario